loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:2: error: '=' expected but ';' found.
a=0
^